fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -21,5 +21,5 @@ figure {
     width: 50px;
     height: 50px;
     margin: 1px;
-    overflow: none;
+    overflow: clip;
 }
